fix(gateway): fix code quality warnings in test files
HIGH PRIORITY FIXES:
- Replace Java assert statements with AssertJ assertions
- Add null checks after .block() calls or use StepVerifier consistently
- AccountLockingIntegrationTest: 7 assert -> assertThat conversions
- RateLimitingFilterTest: Replace .block() with StepVerifier for consistency

MEDIUM PRIORITY FIXES:
- Remove wildcard imports (import static org.mockito.Mockito.*)
  - EmailServiceTest, AuthServiceTest, UserServiceTest: Explicit Mockito imports
  - JwtTokenProviderTest: Explicit AssertJ imports
- Replace deprecated Arrays.asList() with List.of()
  - JwtAuthenticationIntegrationTest: 6 replacements
  - JwtTokenProviderTest: 9 replacements
  - RolePermissionIntegrationTest: 1 replacement
  - AuthControllerTest: 2 replacements

This improves code safety (null checks), clarity (explicit imports),
and modernizes code patterns (List.of() over Arrays.asList()).

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>